Bug 97513 - clover reports wrong device pointer size
Summary: clover reports wrong device pointer size
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/radeonsi (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Jan Vesely
QA Contact: Vedran Miletić
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-08-28 01:35 UTC by Matt Arsenault
Modified: 2016-08-29 19:52 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Matt Arsenault 2016-08-28 01:35:38 UTC
CL_DEVICE_ADDRESS_BITS incorrectly reports the pointer size as 32-bits instead of 64
Comment 1 Vedran Miletić 2016-08-29 18:14:30 UTC
Patch on ML: https://lists.freedesktop.org/archives/mesa-dev/2016-August/127379.html
Comment 2 Vedran Miletić 2016-08-29 19:52:34 UTC
Fixed by Jan Vesely c7af84968d4ee0f67c46c347c6fb83d6fbc83ef3 and 083746bc4811944dcc25c5b6589d7df1bc95eb02.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.