src/gallium/state_trackers/clover/api/device.cpp
@@ -158,7 +158,7 @@ clGetDeviceInfo(cl_device_id d_dev, cl_device_info param,
       break;
 
    case CL_DEVICE_ADDRESS_BITS:
-      buf.as_scalar<cl_uint>() = 32;
+      buf.as_scalar<cl_uint>() = dev.address_bits();
       break;
 
    case CL_DEVICE_MAX_READ_IMAGE_ARGS:
